--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Amrutha
             This is my first program.....
+            This is an example 
             
         </div>
         <script type="text/javascript" src="/ui/main.js">
